Correction alignement section offre

--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ body {
 
 /* line 400, ../compass/sass/style.scss */
 .next-section-offer {
-  margin-top: 40px;
+  margin-top: 15px;
 }
 
 /*.wufoo label.desc, .wufoo legend.desc {
